--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="secondaryTextColor">#757575</color>
+    <color name="primaryTextColor">#333333</color>
+    <color name="buttonColor">#6200EE</color>
+    <color name="gray">#CCCCCC</color>
+
+
 </resources>
