--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container_Gallery"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.gallery.GalleryFragment">
@@ -46,7 +47,15 @@
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
-
     </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/fragment_container_emergente"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="gone"
+        android:layout_gravity="bottom"
+        android:animateLayoutChanges="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
