Implemento Imagenes dentro de las publicacione sy el perfil firebase esta extendido para dentro de un mes

--- a/app/src/main/res/layout/fragment_mostrar_usuarios.xml
+++ b/app/src/main/res/layout/fragment_mostrar_usuarios.xml
@@ -6,9 +6,30 @@
     android:background="@android:color/darker_gray"
     tools:context=".ui.home.verUser.mostrarUsuarios">
 
-    <FrameLayout
-        android:id="@+id/fragment_mostrar_Usuarios"
+    <!-- ScrollView que contiene el LinearLayout y la ProgressBar -->
+    <ScrollView
+        android:id="@+id/scrollViewUsuarios"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <!-- LinearLayout para contener las vistas de usuario -->
+        <LinearLayout
+            android:id="@+id/linearUsuarios"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- ProgressBar visible cuando se está cargando -->
+            <ProgressBar
+                android:id="@+id/progressBarUsuarios"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
